fix layout on mobile and fix scrolling on the "projects" tab

--- a/src/pages/Projects.module.scss
+++ b/src/pages/Projects.module.scss
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: calc(100vh - 62px);
-    width: 100vw;
-    gap: 20px;
+    height: 100%;
+    width: 100%;
+    flex-wrap: wrap;
 
     :global(.card) {
         width: 30vw;
@@ -14,6 +14,27 @@
 
     h2 {
         border-style: outset;
+    }
+
+    .scroll {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-bottom: 5rem;
+        padding-top: 5rem;
+        height: 100%;
+        width: 100%;
+        gap: 20px;
+        overflow-y: scroll;
+    }
+}
+
+@media (orientation: portrait) {
+    #projects {
+        :global(.card) {
+            max-width: 80vw;
+            width: 80vw;
+        }
     }
 }
 
